<resources>
    <string name="app_name">CRMSalesConsultant</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="menu_settings">Settings</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="github">GitHub</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="search">搜索</string>
    <string name="search_hint_customer">客户名称/客户移动电话</string>
    <string name="search_hint_car_resource">底盘号/装备配置</string>
    <string name="assign">分配</string>
    <string name="approval">领导审批</string>
    <string name="view_funnel">查看漏斗</string>
    <string name="save">保存</string>
    <string name="loading">Loading#8230;#8230;#8230;</string>
    <string name="custSm">销售经理</string>
    <string name="custSc">销售顾问</string>
    <string name="SaleTreasurer">销售总监</string>
    <string name="info">信息</string>
    <string name="alert">提醒</string>
    <string name="warn">警告</string>
    <string name="error">错误</string>
    <string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="opt_success">操作成功！</string>
	<string name="opt_fail">操作失败！</string>
    <string name="exit">是否确认退出？</string>
    <string name="format_alert">仅支持“.png\\.jpg”格式！</string>
    <string name="chooseCustSc">请选择销售顾问！</string>
    <string name="menu_main">首页</string>
    <string name="sm_menu_sales_oppo">销售线索管理</string>
    <string name="sm_menu_cust_order">客户订单管理</string>
    <string name="sm_menu_trace_plan">跟踪计划管理</string>
    <string name="sm_menu_vehicle_search">车辆资源查询</string>
    <string name="sm_menu_cust_manage">客户管理</string>
    <string name="sm_menu_sales_director_funnel">销售总监漏斗</string>
    <string name="sm_menu_sales_director_funnel1">销售总监漏斗信息</string>
    <string name="sc_menu_sales_oppo">销售线索</string>
    <string name="sc_menu_cust_order">客户订单</string>
    <string name="sc_menu_trace_plan">跟踪计划</string>
    <string name="sc_menu_vehicle_search">车辆资源查询</string>
    <string name="sc_menu_cust_manage">客户管理</string>
    <string name="menu_cust_info">客户信息</string>
    <string name="contacter_tab">联系人</string>
    <string name="drivetest_tab">试乘试驾</string>
    <string name="contactor_tab">联系人</string>
    <string name="customer_order_tab">客户订单</string>
    <string name="customer_owner">销售顾问</string>
    <string name="drivetest_info">           试乘试驾信息</string>
    <string name="traceplan_tab">跟踪计划</string>
    <string name="salesorder_tab">销售订单</string>
    <string name="attachment_tab">文档图片信息</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_main_page">首页</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
	<string name="people_image">使用者头像</string>
	<string name="todo_list_label">我的待办事项：</string>
	<string name="depart_label">部门：</string>
	<string name="position_label">职位：</string>
	<string name="user_name_label">姓名：</string>
	<string name="select_label">選択</string>
	<string name="oppotunity_info">销售线索信息</string>
	<string name="customer_info">客户信息</string>
	<string name="car_info">购车信息</string>
	<string name="wait_for_add">加载中&#8230;</string>
	<string name="customer_select">客户选择</string>
	<string name="todo_trace_plan_label">跟踪计划:</string>
	<string name="todo_expired_trace_plan">过期跟踪计划</string>
	<string name="todo_today_trace_plan">今日跟踪计划</string>
	<string name="todo_sales_oppo_label">销售线索:</string>
	<string name="todo_expired_sales_oppo">已过期销售线索</string>
	<string name="todo_three_day_oppo">3日内计划购车线索</string>
	<string name="todo_cust_order_label">客户订单:</string>
	<string name="todo_three_day_order">3日内到期订单</string>
	<string name="todo_cust_manager_label">客户管理:</string>
	<string name="todo_no_traceplan_customer">没有跟踪计划的客户</string>
	<string name="today_collect_customers">今日客户接待</string>
	<string name="today_customer_order">今日客户订单</string>
	<string name="today_sales_project">今日销售线索</string>
	<string name="today_complete_sales_project">今日成交线索</string>
	<string name="complete_tracplan">完成跟踪计划</string>
	<string name="today_destroy_sales_project">今日废弃线索</string>
	<string name="today_test_drive">今日试乘试驾</string>
	<string name="customer_list_info">客户管理</string>
	<string name="customer_order_info_title">客户订单信息</string>
	<string name="customer_order_info_order_subtitle">客户订单</string>
	<string name="car_resource_info_subtitle">车辆资源信息</string>
	<string name="customer_order_info_project_subtitle">所属销售线索</string>
	<string name="customer_info_title">客户管理</string>
	<string name="customer_info_subtitle">客户信息</string>
	<string name="car_search_info_subtitle">高级查询</string>
	<string name="customer_search_info_subtitle">高级查询</string>
	<string name="car_resource_info_title">车辆资源信息</string>
	<string name="attachment_list_title">文档图片信息</string>
	<string name="contacter_info_title">联系人</string>
	<string name="purchase_car_info_title">购车信息</string>
	<string name="more_infomation">更多</string>
	<string name="tracking_program_info_title">跟踪计划信息</string>
	<string name="tracking_program_info">跟踪信息</string>
	<string name="create_tracking_program_info">新建跟踪计划</string>
	<string name="follow_oppo_info_title">线索信息</string>
	<string name="advanced_search">高级搜索</string>
	<string name="loginpage">LoginImage</string>
	<string name="login_error">用户名或密码输入不正确。</string>
	<string name="network_error">网络异常，请检查网络连接！</string>
	<string name="attach_info_title">文档图片</string>
	<string name="username">用户名</string>
	<string name="login_password_hint">密码</string>
	<string name="username_warning">请输入用户名!</string>
	<string name="password_warning">请输入密码!</string>
	<string name="login_ip_name">内网IP:</string>
	<string name="login_outip_name">外网IP:</string>
	<string name="login_ip_name_hint">请输入内网IP地址!</string>
	<string name="login_outip_name_hint">请输入外网IP地址!</string>
	<string name="prompts">提示</string>
	<string name="prompts_message">完成一条跟踪计划后没有建立后续跟踪计划，是否继续保存？</string>
	<string name="prompts_drivetest_message">未进行试驾操作，是否进行递交新车？</string>
	<string name="start_time_order">开始时间正序排序</string>
	<string name="preorder_Date_order">预购日期倒序排序</string>
	<string name="buildup_date_order">建立时间倒序排序</string>
	<string name="execute_time_order">执行时间正序排序</string>
	<string name="already_comment">已批示</string>
	<string name="no_comment">未批示</string>
	<string name="key_tail">:</string>
	<string name="km">公里</string>
	<string name="pull_down_to_refresh">下拉更新</string>
	<string name="release_to_update">松开更新</string>
	<string name="is_being_updated">正在更新&#8230;</string>
	<string-array name="status_codes">
		<item>0=未知异常.</item>
		<item>500=操作失败！</item>
		<item>400=网络错误，请重试！</item>
		<item>401=待机时间过长，重新登录！</item>
		<item>403=网络错误，请重试！</item>
		<item>407=用户名或密码错误！</item>
		<item>903=服务器异常！</item>
		<item>904=网络错误，请重试！</item>
		<item>905=网络错误，请检查网络连接！</item>
		<item>906=网络异常，请检查网络连接！</item>
		<item>909=输入非法地址，请检查地址是否正确！</item>
		<item>408=当前用户没有权限访问系统！</item>
	</string-array>
	<string name="dataverify_bemust">请将必填字段填写完整！</string>
	<string name="dataverify_hasorder">产生订单时，品牌，车型，车身颜色，内饰，配置不可为空，请将数据填写完整！</string>
	<string name="dataverify_salessquote">销售报价输入不正确，请重新输入！</string>
	<string name="dataverify_preorderCount">预购台数输入不正确，请重新输入！</string>
	<string name="dataverify_preorderCount_1">预购台数数值不能大于2位数！</string>
	<string name="dataverify_preorderDate">预购车日期输入不正确，请重新输入！</string>
	<string name="dataverify_preorderDate_1">成交日期输入不正确，请重新输入！</string>
	<string name="dataverify_chassisNo">底盘号输入不正确，请重新输入！</string>
	<string name="dataverify_engineNo">发动机号输入不正确，请重新输入！</string>
	<string name="dataverify_licensePlate">牌照号输入不正确，请重新输入！</string>
	<string name="dataverify_pickupDate">提车日期输入不正确，请重新输入！</string>
	<string name="dataverify_invoicetitle">发票名称输入过长！</string>
	<string name="dataverify_comment">备注输入过长！</string>
	<string name="dataverify_custname">客户名称过长，请重新输入！</string>
	<string name="dataverify_phonenumber">客户移动电话输入不正确，请重新输入！</string>
	<string name="dataverify_otherphonenumber">客户其他电话输入不正确，请重新输入！</string>
	<string name="dataverify_contacter_type">联系人类型输入不正确，请重新输入！</string>
	<string name="dataverify_phonenumber_musthave">客户移动电话和客户其他电话必须输入其中一项！</string>
	<string name="dataverify_id1">身份证号输入不正确，请重新输入！</string>
	<string name="dataverify_id2">组织证号输入不正确，请重新输入！</string>
	<string name="dataverify_id3">证件号码输入不正确，请重新输入！</string>
	<string name="dataverify_birth">生日输入不正确，请重新输入！</string>
	<string name="dataverify_fax_number">传真号码输入不正确，请重新输入！</string>
	<string name="dataverify_qq_number">QQ号码输入不正确，请重新输入！</string>
	<string name="dataverify_postnumber">邮编输入不正确，请重新输入！</string>
	<string name="dataverify_address">客户地址输入过长，请重新输入！</string>
	<string name="dataverify_email">邮箱输入不正确，请重新输入！</string>
	<string name="dataverify_licensePlate1">现用车牌照号输入不正确，请重新输入！</string>
	<string name="dataverify_dotime">计划执行时间输入不正确，请重新输入！</string>
	<string name="dataverify_activitycontent">活动内容输入过长！</string>
	<string name="dataverify_custfeedback">客户反馈输入过长！</string>
	<string name="dataverify_leadercomment">领导批示输入过长！</string>
	<string name="dataverify_contacter_long">联系人过长，请重新输入！</string>
	<string name="dataverify_isEmpty">领导批示不可为空</string>
	<string name="execute_time_small">执行时间不能小于当前时间</string>
	<string name="post_erro">邮编输入不正确！</string>
	<string name="driverName">试驾人姓名</string>
	<string name="driverMobile">试驾人手机</string>
	<string name="driverLicenseNo">驾驶证号</string>
	<string name="driveChassisNo">试驾车底盘号</string>
	<string name="driveLicensePlate">试驾车牌照号</string>
	<string name="driveStatus">驾驶状态</string>
	<string name="driveStartTime">试驾开始时间</string>
	<string name="driveEndTime">试驾结束时间</string>
	<string name="driveStartKM">试驾起始里程</string>
	<string name="driveEndKM">试驾结束里程</string>
	<string name="brand_1">品牌</string>
	<string name="brand_2">车系</string>
	<string name="model">车型</string>
	<string name="outsideColor">车身颜色</string>
	<string name="outsideColor_1">外饰颜色</string>
	<string name="insideColor">内饰颜色</string>
	<string name="insideColorCheck">内饰颜色必选</string>
	<string name="carConfiguration">配置</string>
	<string name="carstatus">车辆状态</string>
	<string name="salesQuote">销售报价</string>
	<string name="dealPriceInterval">交易价格区间</string>
	<string name="payment">付款方式</string>
	<string name="preorderCount">预购台数</string>
	<string name="preorderDate">预购日期</string>
	<string name="finish_preorderDate">成交日期</string>
	<string name="lose_date">流失日期</string>
	<string name="flowStatus">流程状态</string>
	<string name="flowStatus_1">递交新车</string>
	<string name="flowStatus_2">初次接触</string>
	<string name="flowStatus_3">试车</string>
	<string name="flowStatus_4">签订单</string>
	<string name="flowStatus_5">弄清客户需求</string>
	<string name="flowStatus_6">新车展示</string>
	<string name="flowStatus_7">报价</string>
	<string name="dealPossibility">成交可能性</string>
	<string name="purchMotivation">购买动机</string>
	<string name="chassisNo">底盘号</string>
	<string name="engineNo">发动机号</string>
	<string name="licensePlate">牌照号</string>
	<string name="licenseProp">牌照属性</string>
	<string name="pickupDate">提车日期</string>
	<string name="preorderTag">预定标识</string>
	<string name="giveupTag">放弃销售机会</string>
	<string name="giveupReason">放弃原因</string>
	<string name="invoiceTitle">发票名称</string>
	<string name="orderStatus">订单状态</string>
	<string name="abandonFlag">成交状态</string>
	<string name="orderStatus_finish">签订订单</string>
	<string name="finish_order">订单完成</string>
	<string name="purchasecarintention_comment">购车备注</string>
	<string name="must_check">必选</string>
	<string name="predetermined_identification">预定标识</string>
	<string name="car_identification">车辆在库状态</string>
	<string name="identification_status">标识状态</string>
	<string name="contacter">联系人</string>
	<string name="contacter_mobiel">联系人手机</string>
	<string name="contacter_other_phone">其他电话</string>
</resources>