<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/edit" android:title="@string/edit" android:icon="@drawable/edit_btn_selector" android:showAsAction="always"  android:visible="false" android:orderInCategory="1"/>
    <item android:id="@+id/save" android:title="@string/save" android:icon="@drawable/oppoinfo_save_btn" android:showAsAction="always"  android:visible="false" android:orderInCategory="1"/>
    <item android:id="@+id/assign"  android:title="@string/assign" android:icon="@drawable/distribute" android:showAsAction="always" android:visible="false" android:orderInCategory="1"/>
    <item android:id="@+id/approval" android:title="@string/approval" android:icon="@drawable/leader_comment" android:orderInCategory="100" android:showAsAction="always" android:visible="false"/>
    <item android:id="@+id/view_funnel" android:title="@string/view_funnel" android:icon="@drawable/view_funnel" android:orderInCategory="100" android:showAsAction="always" android:visible="false"/>
    <item android:id="@+id/add" android:title="@string/add" android:icon="@drawable/add_btn_selector" android:orderInCategory="100" android:showAsAction="always" android:visible="false"/>
    <item android:id="@+id/search" android:title="@string/search" android:icon="@drawable/seach_btn_selector" android:orderInCategory="100" android:showAsAction="always" android:visible="false"/>
</menu>